chore: appication.yaml를 resource 폴더에 복사하는 명령어 추가

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,17 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+processResources.dependsOn('securityInfo')
+
+task securityInfo() {
+	copy {
+		from './idea-rush-security/application.yaml'
+		include '*.yaml'
+		into './src/main/resources'
+	}
+}
+
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
