--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,19 @@ jobs:
           token: ${{ secrets.ACTION_TOKEN }}
           submodules: true
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+        shell: bash
+
+      - name: Build with Gradle
+        run: ./gradlew build
+        shell: bash
+
       - name: Login to AWS ECR
         id: login-ecr
         uses: aws-actions/configure-aws-credentials@v1
