--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,5 +50,5 @@ jobs:
           IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/my-container-app:$IMAGE_TAG .
-          docker tag $ECR_REGISTRY/my-container-app:$IMAGE_TAG $ECR_REGISTRY/my-container-app:$IMAGE_TAG
-          docker push $ECR_REGISTRY/my-container-app:$IMAGE_TAG
+#          docker tag $ECR_REGISTRY/my-container-app:$IMAGE_TAG $ECR_REGISTRY/my-container-app:$IMAGE_TAG
+          docker push my-container-app:$IMAGE_TAG
