--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,11 @@ jobs:
       - name: Build and Push Docker image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: idea-rush
           IMAGE_TAG: latest
-        run: |
-          docker build -t $ECR_REGISTRY/my-container-app:$IMAGE_TAG .
+        run:
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+#          docker build -t $ECR_REGISTRY/my-container-app:$IMAGE_TAG .
 #          docker tag $ECR_REGISTRY/my-container-app:$IMAGE_TAG $ECR_REGISTRY/my-container-app:$IMAGE_TAG
-          docker push my-container-app:$IMAGE_TAG
+#          docker push my-container-app:$IMAGE_TAG
