--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,8 +50,8 @@ jobs:
           ECR_REPOSITORY: idea-rush
           IMAGE_TAG: latest
         run:
-          docker buildx build --platform=linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+#          docker buildx build --platform=linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+#          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker tag $ECR_REGISTRY/my-container-app:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-#          docker build -t $ECR_REGISTRY/my-container-app:$IMAGE_TAG .
-#          docker tag $ECR_REGISTRY/my-container-app:$IMAGE_TAG $ECR_REGISTRY/my-container-app:$IMAGE_TAG
-#          docker push my-container-app:$IMAGE_TAG
