--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,14 +53,14 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . 
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: WAS 인스턴스 접속 및 애플리케이션 실행 # (5)
-        uses: appleboy/ssh-action@v0.1.6
+      - name: Execute Server Init Script
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.WAS_HOST }}
-          username: ubuntu
-          password: ${{ secrets.WAS_PASSWORD }}
+          username: ${{ secrets.WAS_USER }}
+          key: ${{ secrets.WAS_PASSWORD }}
           script: |
-            docker stop $(docker ps -a -q) 
-            docker rm $(docker ps -a -q) 
-            docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-            docker run -d -p 8080:8080 $ECR_REGISTRY/$ECR_REPOSITORY
+            sudo docker stop $(docker ps -a -q) 
+            sudo docker rm $(docker ps -a -q) 
+            sudo docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            sudo docker run -d -p 8080:8080 $ECR_REGISTRY/$ECR_REPOSITORY
