--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
           username: ${{ secrets.WAS_USER }}
           key: ${{ secrets.WAS_PASSWORD }}
           script: |
-            sudo docker stop $(docker ps -a -q) 
-            sudo docker rm $(docker ps -a -q) 
-            sudo docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-            sudo docker run -d -p 8080:8080 $ECR_REGISTRY/$ECR_REPOSITORY
+            docker stop $(docker ps -a -q) 
+            docker rm $(docker ps -a -q) 
+            docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            docker run -d -p 8080:8080 $ECR_REGISTRY/$ECR_REPOSITORY
