--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'org.postgresql:postgresql'
+
+	//Web socket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 processResources.dependsOn('securityInfo')
