--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,13 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
+        
+      - name: Remove generated QueryDSL classes
+        run: rm -rf build/generated/querydsl/*
+        shell: bash
 
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew build
         shell: bash
 
       - name: Login to AWS ECR
