--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,17 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
-        
+
       - name: Remove generated QueryDSL classes
         run: rm -rf build/generated/querydsl/*
         shell: bash
 
+      - name: List contents of build/generated/querydsl
+        run: ls -al build/generated/querydsl/
+        shell: bash
+
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew clean build
         shell: bash
 
       - name: Login to AWS ECR
