--- a/build.gradle
+++ b/build.gradle
@@ -83,9 +83,9 @@ querydsl {
 //	main.java.srcDir querydslDir
 //}
 //컴파일 되면서 Q 클래스 생성
-configurations {
-	querydsl.extendsFrom compileClasspath
-}
+//configurations {
+//	querydsl.extendsFrom compileClasspath
+//}
 compileQuerydsl {
 	options.annotationProcessorPath = configurations.querydsl
 }
