--- a/build.gradle
+++ b/build.gradle
@@ -72,21 +72,21 @@ tasks.named('test') {
 
 //querydsl 추가 시작
 //위치
-//def querydslDir = "$buildDir/generated/querydsl"
-//
-//querydsl {
-//	jpa = true
-//	querydslSourcesDir = querydslDir
-//}
+def querydslDir = "$buildDir/generated/querydsl"
+
+querydsl {
+	jpa = true
+	querydslSourcesDir = querydslDir
+}
 //위치 IDE 애들이 자동으로 import 해줌.
-//sourceSets {
-//	main.java.srcDir querydslDir
-//}
+sourceSets {
+	main.java.srcDir querydslDir
+}
 //컴파일 되면서 Q 클래스 생성
-//configurations {
-//	querydsl.extendsFrom compileClasspath
-//}
-//compileQuerydsl {
-//	options.annotationProcessorPath = configurations.querydsl
-//}
+configurations {
+	querydsl.extendsFrom compileClasspath
+}
+compileQuerydsl {
+	options.annotationProcessorPath = configurations.querydsl
+}
 //querydsl 추가 끝
