chore : QueryDSL QClass 생성 되어있다는 에러로 인한 deploy 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         shell: bash
 
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew cleanQuerydsl clean build
         shell: bash
 
       - name: Login to AWS ECR
