--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,11 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
+	implementation (
+			'ch.qos.logback:logback-classic:1.4.11',
+			'ch.qos.logback:logback-core:1.4.11',
+	)
+
 	//Web socket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
