--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,10 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'io.projectreactor.kafka:reactor-kafka:1.3.20'
 
-	implementation (
-			'ch.qos.logback:logback-classic:1.4.11',
-			'ch.qos.logback:logback-core:1.4.11',
-	)
+//	implementation (
+//			'ch.qos.logback:logback-classic:1.4.11',
+//			'ch.qos.logback:logback-core:1.4.11',
+//	)
 
 	//Web socket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
@@ -55,6 +55,9 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	//Redis
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.1.2'
+
+	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.7.0'
+	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.7.0'
 
 }
 
